fix:优化 tipLayer的显示z-index

--- a/extensions/board.edit.tool/style.less
+++ b/extensions/board.edit.tool/style.less
@@ -170,38 +170,38 @@
         box-shadow   : rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
         top          : 28px;
         width        : 180px;
-        padding      : 10px;
+        // padding      : 10px;
         box-sizing   : border-box;
 
-        .shy-shape-stroke-opacity,
-        .shy-shape-stroke-width {
-            margin: 0px 5px;
-        }
+        // .shy-shape-stroke-opacity,
+        // .shy-shape-stroke-width {
+        //     margin: 0px 5px;
+        // }
 
-        .shy-shape-stroke-types {
-            display        : flex;
-            justify-content: center;
-            align-items    : flex-start;
+        // .shy-shape-stroke-types {
+        //     display        : flex;
+        //     justify-content: center;
+        //     align-items    : flex-start;
 
-            a {
-                cursor   : pointer;
-                flex-grow: 1;
-                height   : 30px;
+        //     a {
+        //         cursor   : pointer;
+        //         flex-grow: 1;
+        //         height   : 30px;
 
-                svg {
-                    width : 30px;
-                    height: 30px;
-                }
-            }
-        }
+        //         svg {
+        //             width : 30px;
+        //             height: 30px;
+        //         }
+        //     }
+        // }
 
         .shy-shape-stroke-colors {
-            margin-top     : 10px;
-            width          : 100%;
-            display        : flex;
-            justify-content: center;
-            align-items    : flex-start;
-            flex-wrap      : wrap;
+            // margin-top     : 10px;
+            // width          : 100%;
+            // display        : flex;
+            // justify-content: center;
+            // align-items    : flex-start;
+            // flex-wrap      : wrap;
 
             a {
                 display      : inline-block;
@@ -244,7 +244,6 @@
         align-items    : center;
         width          : 20px;
         height         : 20px;
-
         a {
             display      : inline-block;
             width        : 16px;
@@ -264,12 +263,12 @@
         box-shadow   : rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
         top          : 28px;
         width        : 180px;
-        padding      : 10px;
+        // padding      : 10px;
         box-sizing   : border-box;
 
-        .shy-shape-fill-opacity {
-            margin: 0px 5px;
-        }
+        // .shy-shape-fill-opacity {
+        //     margin: 0px 5px;
+        // }
 
         .shy-shape-fill-colors {
             display        : flex;
