--- a/extensions/text.tool/style.less
+++ b/extensions/text.tool/style.less
@@ -4,13 +4,15 @@
     box-sizing     : border-box;
     background     : white;
     box-shadow     : rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
-    z-index        : 10000;
+    // z-index        : 10000;
     display        : flex;
     justify-content: flex-start;
     align-items    : stretch;
     user-select    : none;
     padding        : 5px;
     border-radius  : 4px;
+
+    
 
     &-item {
         padding        : 5px;
